--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <h1>CETEGORIES</h1>
             <div class="pr-ctgr">
                 <div class="ctgr-card">
-                    <img src="/cat-1.jpg" alt="">
+                    <img src="cat-1.jpg" alt="">
                     <div class="vtgr-des">
 
                         <p>Cetegory Name</p>
@@ -116,7 +116,7 @@
                 </div>
                 <div class="ctgr-card">
                     
-                    <img src="/cat-2.jpg" alt="">
+                    <img src="cat-2.jpg" alt="">
                     <div class="vtgr-des">
                         <p>Cetegory Name</p>
                         <p>100 products</p>
@@ -124,7 +124,7 @@
                 </div>
                 <div class="ctgr-card">
                     
-                    <img src="/cat-3.jpg" alt="">
+                    <img src="cat-3.jpg" alt="">
                     <div class="vtgr-des">
                         <p>Cetegory Name</p>
                         <p>100 products</p>
