--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
         <!-------------- different Cetegories ---------------->
 
-        <h1>CETEGORIES</h1>
+        <h1 class="fp">CETEGORIES</h1>
         <div id="ctgr d-flex flex-row justify-content-center">
             <span class="d-grid">
                 <div class="pr-ctgr justify-self-center justify-content-center mx-auto d-flex flex-row">
